--- a/src/main/resources/templates/widget/report-typo-success.html
+++ b/src/main/resources/templates/widget/report-typo-success.html
@@ -6,4 +6,5 @@
     <span>Сообщение об ошибке успешно отправлено. Спасибо!</span>
 </div>
 </body>
+<footer th:replace="~{fragments/footer :: foot}"></footer>
 </html>
