--- a/src/main/resources/templates/widget/report-typo-error.html
+++ b/src/main/resources/templates/widget/report-typo-error.html
@@ -5,5 +5,6 @@
 <div class="alert alert-danger">
     <span>Во время отправки произошла ошибка. Попробуйте позже.</span>
 </div>
+<footer th:replace="~{fragments/footer :: foot}"></footer>
 </body>
 </html>
