--- a/src/main/resources/templates/workspace/wks-settings.html
+++ b/src/main/resources/templates/workspace/wks-settings.html
@@ -50,5 +50,6 @@ curl -X POST --location "[[${rootUrl}]]/api/workspaces/[[${wksId}]]/typos" \
         </div>
     </div>
 </main>
+<footer th:replace="~{fragments/footer :: foot}"></footer>
 </body>
 </html>
