--- a/src/main/resources/templates/fragments/Layout.html
+++ b/src/main/resources/templates/fragments/Layout.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<body>
+<html lang="en"   xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+    <head layout:fragment="head">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta content="width=device-width, initial-scale=1" name="viewport">
     
-    <footer th:fragment="foot" class="bg-dark text-light fixed-bottom">
+        <title>Hexlet Typo Reporter</title>
+    
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" type="text/css" />
+        <!-- Bootstrap Bundle with Popper -->
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}" type="text/javascript"></script>
+    </head>
+<body>
+    <footer layout:fragment="foot" class="bg-dark text-light fixed-bottom">
         <div class="container-xl">
             <div class="row justify-content-lg-around">
                 <div class="col-sm-6 col-md-3 col-lg-auto">
