--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <body>
     
-    <footer th:fragment="foot" class="bg-dark text-light fixed-bottom">
+    <footer layout:fragment="foot" class="bg-dark text-light fixed-bottom">
         <div class="container-xl">
             <div class="row justify-content-lg-around">
                 <div class="col-sm-6 col-md-3 col-lg-auto">
